fix overflow x

--- a/static/style.scss
+++ b/static/style.scss
@@ -717,6 +717,7 @@ footer{
         border-top: none;
     }
     .footer{
+        overflow-x: hidden;
         grid-template-columns: 1fr 1fr;
         :nth-child(3){
             border-left: none;
